properties update (version, etc)

--- a/Facebook Nodes/build.properties
+++ b/Facebook Nodes/build.properties
@@ -3,4 +3,5 @@ bin.includes = plugin.xml,\
                META-INF/,\
                facebookconnector.jar,\
                icons/,\
-               lib/restfb-1.6.16.jar
+               lib/restfb-1.6.16.jar,\
+               lib/opencsv-1.8.jar
