--- a/Facebook Nodes/plugin.xml
+++ b/Facebook Nodes/plugin.xml
@@ -9,10 +9,10 @@
 		<node category-path="/pg/facebook" factory-class="com.pg.facebook.api.listposts.node.ListPostsNodeFactory" id="com.pg.facebook.api.listposts.node.ListPostsNodeFactory"/>
 		<node category-path="/pg/facebook" factory-class="com.pg.facebook.api.selectpost.node.SelectPostNodeFactory" id="com.pg.facebook.api.selectpost.node.SelectPostNodeFactory"/>
 		<node category-path="/pg/facebook" factory-class="com.pg.facebook.api.listcomments.node.ListCommentsNodeFactory" id="com.pg.facebook.api.listcomments.node.ListCommentsNodeFactory"/>
-	<node category-path="/" factory-class="com.pg.facebook.api.listadaccounts.ListAdAccountsNodeFactory" id="com.pg.facebook.api.listadaccounts.ListAdAccountsNodeFactory"/>
-<node category-path="/" factory-class="com.pg.facebook.api.listcustomaudiences.ListCustomAudiencesNodeFactory" id="com.pg.facebook.api.listcustomaudiences.ListCustomAudiencesNodeFactory"/>
-<node category-path="/" factory-class="com.pg.facebook.api.createcustomaudience.CreateCustomAudienceNodeFactory" id="com.pg.facebook.api.createcustomaudience.CreateCustomAudienceNodeFactory"/>
-</extension>
+		<node category-path="/pg/facebook" factory-class="com.pg.facebook.api.listadaccounts.ListAdAccountsNodeFactory" id="com.pg.facebook.api.listadaccounts.ListAdAccountsNodeFactory"/>
+		<node category-path="/pg/facebook" factory-class="com.pg.facebook.api.listcustomaudiences.ListCustomAudiencesNodeFactory" id="com.pg.facebook.api.listcustomaudiences.ListCustomAudiencesNodeFactory"/>
+		<node category-path="/pg/facebook" factory-class="com.pg.facebook.api.createcustomaudience.CreateCustomAudienceNodeFactory" id="com.pg.facebook.api.createcustomaudience.CreateCustomAudienceNodeFactory"/>
+	</extension>
    
 	 <extension point="org.knime.workbench.repository.categories">
 	
