--- a/Facebook Nodes/plugin.xml
+++ b/Facebook Nodes/plugin.xml
@@ -12,7 +12,8 @@
 		<node category-path="/pg/facebook/facebook-ad" factory-class="com.pg.facebook.api.listadaccounts.ListAdAccountsNodeFactory" id="com.pg.facebook.api.listadaccounts.ListAdAccountsNodeFactory"/>
 		<node category-path="/pg/facebook/facebook-ad" factory-class="com.pg.facebook.api.listcustomaudiences.ListCustomAudiencesNodeFactory" id="com.pg.facebook.api.listcustomaudiences.ListCustomAudiencesNodeFactory"/>
 		<node category-path="/pg/facebook/facebook-ad" factory-class="com.pg.facebook.api.createcustomaudience.CreateCustomAudienceNodeFactory" id="com.pg.facebook.api.createcustomaudience.CreateCustomAudienceNodeFactory"/>
-	</extension>
+		<node category-path="/pg/facebook/facebook-ad" factory-class="com.pg.facebook.api.deletecustomaudience.DeleteCustomAudienceNodeFactory" id="com.pg.facebook.api.deletecustomaudience.DeleteCustomAudienceNodeFactory"/>
+</extension>
    
 	 <extension point="org.knime.workbench.repository.categories">
 	
