--- a/Facebook Nodes/build.properties
+++ b/Facebook Nodes/build.properties
@@ -4,6 +4,6 @@ bin.includes = plugin.xml,\
                facebookconnector.jar,\
                icons/,\
                lib/opencsv-1.8.jar,\
-               lib/restfb-1.46.0.jar,\
                lib/facebook-java-ads-sdk-2.9.0.jar,\
-               lib/gson-2.5.jar
+               lib/gson-2.5.jar,\
+               lib/restfb-1.48.0.jar
